<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Expenses">

    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Content below the AppBarLayout -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/welcomeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/pageNameExp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/editExpFor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/lblExpFor"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/editExpDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/lblExpDate"
                    android:inputType="date"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/editExpValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/lblExpValue"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:padding="10dp" />

                <Spinner
                    android:id="@+id/spnQty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/lblSpnQty"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/txtVwTotalPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/lblTotPrice" />

                <ImageView
                    android:id="@+id/imgExp"
                    android:layout_width="288dp"
                    android:layout_height="288dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/imageExpenses"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/baseline_camera_alt_24" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSaveExpenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/material_dynamic_primary40"
                    android:text="@string/btnSave"
                    app:cornerRadius="8dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/navigation_menu" />


</androidx.drawerlayout.widget.DrawerLayout>